--- a/Inheritance.vcxproj.filters
+++ b/Inheritance.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="truck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vehicle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="car.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="truck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
